--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -161,7 +160,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 154.16.116.61;
-allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
@@ -302,7 +300,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1095,6 +1092,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1518,7 +1516,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
@@ -1757,14 +1754,12 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
-allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
@@ -1775,6 +1770,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.207.22.190;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1838,7 +1834,6 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
-allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1891,7 +1886,6 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
-allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
@@ -1926,7 +1920,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.208.188.213;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1952,6 +1945,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.48.108.229;
 allow 74.82.47.194;
