--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -160,6 +160,7 @@ deny 149.56.22.133;
 deny 149.56.44.47;
 deny 151.80.148.159;
 deny 154.16.116.61;
+deny 154.213.185.133;
 deny 154.213.185.165;
 deny 154.213.185.183;
 deny 154.213.185.185;
@@ -300,6 +301,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -1071,7 +1073,6 @@ deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
 deny 23.155.8.104;
-deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -1103,7 +1104,6 @@ deny 2602:2da:0:32:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
-deny 2602:f9f3:0:2::3d;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
@@ -1516,6 +1516,7 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
@@ -1721,6 +1722,7 @@ deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
+deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
@@ -1754,12 +1756,13 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
+deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
-deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
+deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:178;
@@ -1770,7 +1773,7 @@ deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.134;
-deny 34.207.22.190;
+deny 3.231.9.237;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1834,6 +1837,7 @@ deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.150.108.229;
 deny 45.151.122.34;
+deny 45.15.157.177;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1851,6 +1855,7 @@ deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.84.0.123;
+deny 45.9.148.113;
 deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.223;
@@ -1886,6 +1891,7 @@ deny 51.81.254.14;
 deny 51.81.254.15;
 deny 51.81.254.3;
 deny 5.181.80.107;
+deny 5.182.86.212;
 deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
@@ -2020,7 +2026,6 @@ deny 89.147.110.214;
 deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.147.111.87;
-deny 89.185.85.140;
 deny 89.187.143.31;
 deny 89.213.174.248;
 deny 89.234.157.254;
